--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos c
 <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
 O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 <p>testando git</p>
+<p>branch titulo</p>
 </body>
 </html>
 
