--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos c
 O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 <p>testando git</p>
 <p>branch titulo</p>
+<p>testando erro</p>
 </body>
 </html>
 
